--- a/live-literals/livelit.html
+++ b/live-literals/livelit.html
@@ -321,7 +321,7 @@ class="margin-toggle"/>
 sidenote-number"></label> <input type="checkbox" id="sn-mps"
 class="margin-toggle"/>
         <span class="sidenote">Jetbrains, <a href="https://www.jetbrains.com/mps/">Meta Programming System (MPS)</a></span>. Such systems represent the opposite end of the spectrum regarding integration: there is no source code at all, the only interface is the graphical user interface.
-        Although this provides arbitrary freedom to mix-and-match different notations, views and languages, the benefits of sharing and maintaing code using regular, textual tools are lost. 
+        Although this provides arbitrary freedom to mix-and-match different notations, views and languages, the benefits of sharing and maintaining code using standard, textual tools are lost. 
         </p>
       
         <h3>Outlook: Towards Live Text</h3>
